Project

General

Profile

Actions

Bug #9983

closed

memory leak at ENV.shift on Windows

Bug #9983: memory leak at ENV.shift on Windows

Added by nobu (Nobuyoshi Nakada) over 12 years ago. Updated about 12 years ago.

Status:
Closed
Assignee:
Target version:
ruby -v:
trunk
[ruby-dev:48332]

Description

Windows版で、ENV.shift がメモリリークしているようです。


Related issues 1 (0 open — 1 closed)

Copied from Ruby - Bug #9978: memory leak at ENV.select on WindowsClosedwindowsActions
Actions

Also available in: PDF Atom